logo, acentos, pagina show

--- a/app/views/compra/correoCompra.html.erb
+++ b/app/views/compra/correoCompra.html.erb
@@ -22,10 +22,10 @@
 			<b>CIF/NIF: </b><%= @factura.cif%>
 		</p>
 		<p>
-			<b>Direccion: </b><%= @factura.calle%>, numero <%= @factura.numero%>
+			<b>Dirección: </b><%= @factura.calle%>, numero <%= @factura.numero%>
 		</p>
 		<p>
-			<b>Codigo postal: </b><%= @factura.cp%>
+			<b>Código postal: </b><%= @factura.cp%>
 		</p>
 		<p>
 			<b>Provincia: </b><%= @factura.provincia%>
