--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 <div class="container" style="background-color:white; width:100%">
 					<div class="row">
 						<div class="col-sm-6 col-md-4">
-							<a href="http://talentumempleo.com/" target="_blank"><img src="<%= asset_path( 'talentumempleo.jpg' ) %>" alt="talentumempleo"/></a>
+							<a href="http://talentumempleo.com/" target="_blank"><img src="<%= asset_path( 'talentum.jpg' ) %>" alt="talentumempleo"/></a>
 						</div>
 						<div class="col-sm-6 col-md-4">
 							<a href="https://github.com/Grupo4Talentum/TalentumTicketing" target="_blank"><img src="<%= asset_path( 'github.png' ) %>" alt="github"/></a>
