--- a/app/views/pedidos/new.html.erb
+++ b/app/views/pedidos/new.html.erb
@@ -1,3 +1,4 @@
+<br><br>
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-sm-2">
@@ -11,7 +12,7 @@
 				<img src="<%=asset_path ('ticket.PNG')%>" class= 'img-responsive aspect'>
 			<%end%>
 			<br>
-			<span>Descripción<%= @productos.descripcion%></span>
+			<span><%= @productos.descripcion%></span>
 			<br>
 			<span>Precio: <%= @productos.precio%> euros</span>
 		</div>
