Cambios en show

--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -1,5 +1,6 @@
+<br><br>
 <div class="container">
-    <div class="centered text-center">
+    <div id="compra" class="centered text-center">
         <h3>Enhorabuena por la compra</h3>
 			<h4>Estos son los datos de su pedido</h4>
 					<p class="alcentro">
