Cambios en show

--- a/app/views/pedidos/show.html.erb
+++ b/app/views/pedidos/show.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
     <div id="compra" class="centered text-center">
         <h3>Enhorabuena por la compra</h3>
+        <p class="alcentro">Se le ha envíado un email con su pedido y factura</p>
 			<h4>Estos son los datos de su pedido</h4>
 					<p class="alcentro">
 				<%= @pedido.nombre %>
