Pequeño cambio en el search

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
 				<input type="text" class="form-control" placeholder="Buscar" name="busqueda">
 			</div>
 			<button type="submit" class="btn btn-default">
-				Enviar
+				Buscar
 			</button>
 		</form>
 	</div>
