--- a/app/views/productos/search.html.erb
+++ b/app/views/productos/search.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 	<div class="row">
 		<%for producto in @listadoProductosEncontrados %>
+		<% if producto.stock %>
 		<%if producto.stock>0 && producto.estado=='activo'%>
 		<a href="/productos/show?id=<%= producto.id %>">
 		<div id="hola"class="col-sm-6 col-md-4" style="background-color:white">
@@ -22,6 +23,7 @@
 			<a href="/productos/show?id=<%= producto.id %>"><button type="submit" class="btn btn-success" role="button">Detalles</button></a>
 			
 		</div></a>
+		<%end%>
 		<%end%>
 		<%end%>
 	</div>
