--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -11,12 +11,12 @@
 			
 		</div>
 		<div class="col-sm-10">
-			<%= @producto.titular %>
+			<strong><%= @producto.titular %> </strong>
 			<br>
 
 			<%= @producto.descripcion%>
 			<br>
-			<%= @producto.precio%>
+			<%= @producto.precio%> euros
 			<br>
 
 			<br>
